--- a/index.html
+++ b/index.html
@@ -50,14 +50,18 @@
       </div>
       <script src="script.js"></script>
     </section>
-
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
     <section id="skill">
       <div class="skill-inner">
         <div class="skill-header">
-          <h1>My Skills</h1>
+          <p>My Skills</p>
         </div>
         <h2>Utilities and Languages</h2>
-        
+
         <div class="row">
           <div class="skill-container">
             <div class="skill-box">
@@ -92,74 +96,80 @@
             </div>
           </div>
         </div>
-
-        <div class="skill-container">
-          <div class="skill-box">
-            <div class="skill-title">
-              <div class="skill-img">
-                <img src="logos/mysql.png" class="skill-icon" alt="" />
+        <div class="row">
+          <div class="skill-container">
+            <div class="skill-box">
+              <div class="skill-title">
+                <div class="skill-img">
+                  <img src="logos/mysql.png" class="skill-icon" alt="" />
+                </div>
+                <h3>MySQL</h3>
               </div>
-              <h3>MySQL</h3>
+            </div>
+          </div>
+
+          <div class="skill-container">
+            <div class="skill-box">
+              <div class="skill-title">
+                <div class="skill-img">
+                  <img src="logos/c.png" class="skill-icon" alt="" />
+                </div>
+                <h3>C</h3>
+              </div>
+            </div>
+          </div>
+
+          <div class="skill-container">
+            <div class="skill-box">
+              <div class="skill-title">
+                <div class="skill-img">
+                  <img src="logos/c++.png" class="skill-icon" alt="" />
+                </div>
+                <h3>C++</h3>
+              </div>
             </div>
           </div>
         </div>
-
-        <div class="skill-container">
-          <div class="skill-box">
-            <div class="skill-title">
-              <div class="skill-img">
-                <img src="logos/c.png" class="skill-icon" alt="" />
+        <div class="row">
+          <div class="skill-container">
+            <div class="skill-box">
+              <div class="skill-title">
+                <div class="skill-img">
+                  <img src="logos/python.svg" alt="" class="skill-icon" />
+                </div>
+                <h3>Python</h3>
               </div>
-              <h3>C</h3>
-            </div>
-          </div>
-        </div>
-
-        <div class="skill-container">
-          <div class="skill-box">
-            <div class="skill-title">
-              <div class="skill-img">
-                <img src="logos/c++.png" class="skill-icon" alt="" />
-              </div>
-              <h3>C++</h3>
-            </div>
-          </div>
-        </div>
-
-        <div class="skill-container">
-          <div class="skill-box">
-            <div class="skill-title">
-              <div class="skill-img">
-                <img src="logos/python.svg" alt="" class="skill-icon" />
-              </div>
-              <h3>Python</h3>
             </div>
           </div>
         </div>
       </div>
-
       <h2>Frameworks</h2>
-      <div class="skill-container">
-        <div class="skill-box">
-          <div class="skill-title">
-            <div class="skill-img">
-              <img src="logos/nodejs.jpg" class="skill-icon" alt="" />
+      <div class="row">
+        <div class="skill-container">
+          <div class="skill-box">
+            <div class="skill-title">
+              <div class="skill-img">
+                <img src="logos/nodejs.jpg" class="skill-icon" alt="" />
+              </div>
+              <h3>Node JS</h3>
             </div>
-            <h3>Node JS</h3>
           </div>
         </div>
-      </div>
 
-      <div class="skill-container">
-        <div class="skill-box">
-          <div class="skill-title">
-            <div class="skill-img">
-              <img src="logos/react.png" class="skill-icon" alt="" />
+        <div class="skill-container">
+          <div class="skill-box">
+            <div class="skill-title">
+              <div class="skill-img">
+                <img src="logos/react.png" class="skill-icon" alt="" />
+              </div>
+              <h3>React JS</h3>
             </div>
-            <h3>React JS</h3>
           </div>
         </div>
       </div>
+    </section>
+    <section id="project">
+      <div class="project-myws"></div>
     </section>
   </body>
 </html>
