--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <li id="home"><a href="#nav">Home</a></li>
             <li id="home"><a href="#profile">Profile</a></li>
             <li id="home"><a href="#skill">Skills</a></li>
-            <li id="home"><a href="">Projects</a></li>
-            <li id="home"><a href="contactform.html">Contact</a></li>
+            <li id="home"><a href="#projects">Projects</a></li>
+            <li id="home"><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -170,6 +170,26 @@
     </section>
     <section id="project">
       <div class="project-myws"></div>
+    </section>
+
+    <section id="contact">
+      <div class="contact-body">
+      <div class="contact-main">
+        <h1 class="contact-h1">Get in touch with me!</h1>
+
+        <div class="contact-form">
+          <form action="">
+            <p>Name: <input type="text" required /></p>
+            <p>
+              Email:
+              <input type="email" name="sendername" id="senderemail" required />
+            </p>
+            <p>Date: <input type="date" name="date" id="date" required /></p>
+            <input type="submit" title="Submit" />
+          </form>
+        </div>
+      </div>
+    </div>
     </section>
   </body>
 </html>
