--- a/index.html
+++ b/index.html
@@ -171,13 +171,15 @@
       </div>
     </section>
     <section id="project">
-      <div class="project-myws"></div>
+      <div class="project-myws">
+        <h1 class="sub-header">My Projects</h1>
+      </div>
     </section>
 
     <section id="contact">
       <div class="contact-body">
         <div class="contact-main">
-          <h1 class="contact-h1">Get in touch with me!</h1>
+          <h1 class="sub-header">Get in touch with me!</h1>
 
           <div class="contact-form">
             <form action="">
