--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="container-anim">
         <div class="row">
           <div class="photo" style="border: 3%; padding-top: 5%">
-            <img src="profile.jpg" alt="Your Photo" />
+            <img src="profile.JPG" alt="Your Photo" />
           </div>
           <div class="typing-container">
             <p id="text" style="font-size: 120%; padding-top: 20%">
