--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               with HTML, CSS, JavaScript, and integrates with APIs such as
               OpenWeatherMap.
             </p>
-            <a href="#" class="btn">Visit Website</a>
+            <div class="visit"><a href="#" class="btn">Visit Website</a></div>
           </div>
         </div>
         <div class="project" id="restaurant-booking-app">
@@ -211,7 +211,7 @@
               Built with React.js for frontend and Node.js for backend, with
               integration to restaurant reservation APIs.
             </p>
-            <a href="#" class="btn">Visit Website</a>
+            <div class="visit"><a href="#" class="btn">Visit Website</a></div>
           </div>
         </div>
 
@@ -234,7 +234,7 @@
               Developed with Vue.js for frontend and Firebase for backend,
               integrating with mock APIs for order management.
             </p>
-            <a href="#" class="btn">Visit Website</a>
+            <div class="visit"><a href="#" class="btn">Visit Website</a></div>
           </div>
         </div>
       </div>
