--- a/index.html
+++ b/index.html
@@ -174,47 +174,50 @@
       <div class="project-myws">
         <h1 class="skill-header"><p>My Projects</p></h1>
       </div>
-      <div class="main-container"></div>
-      <div class="projects-container">
-        <div class="project" id="weather-app">
-          <img src="weather-app-screenshot.jpg" alt="Weather App Screenshot" />
-          <div class="project-details">
-            <h3>Weather App</h3>
-            <p>
-              A dynamic weather application that provides real-time weather
-              information using external APIs. <br />-> Displays current weather
-              conditions <br />-> Provides hourly and daily forecasts
-              <br />->Supports location-based weather updates
-              <br />->Customizable settings for temperature units <br />Built
-              with HTML, CSS, JavaScript, and integrates with APIs such as
-              OpenWeatherMap.
-            </p>
-            <div class="visit"><a href="#" class="btn">Visit Website</a></div>
+      <div class="main-container">
+        <div class="projects-container">
+          <div class="project" id="weather-app">
+            <img
+              src="weather-app-screenshot.jpg"
+              alt="Weather App Screenshot"
+            />
+            <div class="project-details">
+              <h3>Weather App</h3>
+              <p>
+                A dynamic weather application that provides real-time weather
+                information using external APIs. <br />-> Displays current
+                weather conditions <br />-> Provides hourly and daily forecasts
+                <br />->Supports location-based weather updates
+                <br />->Customizable settings for temperature units <br />Built
+                with HTML, CSS, JavaScript, and integrates with APIs such as
+                OpenWeatherMap.
+              </p>
+              <div class="visit"><a href="#" class="btn">Visit Website</a></div>
+            </div>
+          </div>
+          <div class="project" id="restaurant-booking-app">
+            <img
+              src="restaurant-booking-screenshot.jpg"
+              alt="Restaurant Booking App Screenshot"
+            />
+            <div class="project-details">
+              <h3>Restaurant Booking App</h3>
+              <p>
+                An interactive app allowing users to book tables at restaurants
+                with real-time availability tracking.<br />
+                -> Search and browse nearby restaurants.<br />
+                -> View restaurant details, menus, and reviews.<br />
+                -> Book tables with real-time availability updates.<br />
+                -> Integrated notification system for booking confirmations.
+              </p>
+              <p>
+                Built with React.js for frontend and Node.js for backend, with
+                integration to restaurant reservation APIs.
+              </p>
+              <div class="visit"><a href="#" class="btn">Visit Website</a></div>
+            </div>
           </div>
         </div>
-        <div class="project" id="restaurant-booking-app">
-          <img
-            src="restaurant-booking-screenshot.jpg"
-            alt="Restaurant Booking App Screenshot"
-          />
-          <div class="project-details">
-            <h3>Restaurant Booking App</h3>
-            <p>
-              An interactive app allowing users to book tables at restaurants
-              with real-time availability tracking.<br />
-              -> Search and browse nearby restaurants.<br />
-              -> View restaurant details, menus, and reviews.<br />
-              -> Book tables with real-time availability updates.<br />
-              -> Integrated notification system for booking confirmations.
-            </p>
-            <p>
-              Built with React.js for frontend and Node.js for backend, with
-              integration to restaurant reservation APIs.
-            </p>
-            <div class="visit"><a href="#" class="btn">Visit Website</a></div>
-          </div>
-        </div>
-
         <div class="project" id="food-delivery-mock-app">
           <img
             src="food-delivery-screenshot.jpg"
