--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="projects-container">
           <div class="project" id="weather-app">
             <img
-              src="weather-app-screenshot.jpg"
+              src="weather-app.png"
               alt="Weather App Screenshot"
             />
             <div class="project-details">
@@ -217,27 +217,27 @@
               <div class="visit"><a href="#" class="btn">Visit Website</a></div>
             </div>
           </div>
-        </div>
-        <div class="project" id="food-delivery-mock-app">
-          <img
-            src="food-delivery-screenshot.jpg"
-            alt="Food Delivery Mock App Screenshot"
-          />
-          <div class="project-details">
-            <h3>Food Delivery Mock App</h3>
-            <p>
-              A simulated food delivery app showcasing order placement,
-              tracking, and delivery status updates.<br />
-              -> Browse restaurants and menus.<br />
-              -> Place orders with customized preferences.<br />
-              -> Track orders in real-time.<br />
-              -> Receive notifications for order status updates.
-            </p>
-            <p>
-              Developed with Vue.js for frontend and Firebase for backend,
-              integrating with mock APIs for order management.
-            </p>
-            <div class="visit"><a href="#" class="btn">Visit Website</a></div>
+          <div class="project" id="food-delivery-mock-app">
+            <img
+              src="food-delivery-screenshot.jpg"
+              alt="Food Delivery Mock App Screenshot"
+            />
+            <div class="project-details">
+              <h3>Food Delivery Mock App</h3>
+              <p>
+                A simulated food delivery app showcasing order placement,
+                tracking, and delivery status updates.<br />
+                -> Browse restaurants and menus.<br />
+                -> Place orders with customized preferences.<br />
+                -> Track orders in real-time.<br />
+                -> Receive notifications for order status updates.
+              </p>
+              <p>
+                Developed with Vue.js for frontend and Firebase for backend,
+                integrating with mock APIs for order management.
+              </p>
+              <div class="visit"><a href="#" class="btn">Visit Website</a></div>
+            </div>
           </div>
         </div>
       </div>
