--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 with HTML, CSS, JavaScript, and integrates with APIs such as
                 OpenWeatherMap.
               </p>
-              <div class="visit"><a href="#" class="btn">Visit Website</a></div>
+              <div class="visit"><a href="https://anshshah23.github.io/weather-app/" class="btn">Visit Website</a></div>
             </div>
           </div>
           <div class="project" id="restaurant-booking-app">
