--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <div id="hometitle">
             <h6 class="glitch">Ansh Shah</h6>
           </div>
-          <ul class="login-navigation">
+          <ul class="nav-links">
             <li id="home"><a href="#nav">Home</a></li>
             <li id="home"><a href="#profile">Profile</a></li>
             <li id="home"><a href="#skill">Skills</a></li>
